# datalens-backend

./: .arcignore  .bumpversion.cfg  .editorconfig  .git-blame-ignore-revs  .gitignore  README.md  Taskfile.dist.yaml  Taskfile.dist.yml  Taskfile.yml  build_advise.json  commitlint.config.js  dl-repo.yml  pyproject.toml
app/bi_alerts/: .release.hjson  Makefile  README.md  changelog.md  docker-compose.yml  pyproject.toml  setup.py_backup
app/bi_alerts/_aux/: token_crypto_rotation_crawler.py  token_hash_crawler.py
app/bi_alerts/alembic/: env.py  script.py.mako
app/bi_alerts/app/: .package.json  Dockerfile  __main__.py
app/bi_alerts/bi_alerts/: __init__.py  app.py  db_manager.py  enums.py  exc.py  schemas.py  settings.py
app/bi_alerts/bi_alerts_tests/: utils.py
app/bi_api/: .dockerignore  .release.hjson  Dockerfile  Dockerfile.initdb  Dockerfile.tier1  Makefile  README.md  changelog.md  mypy.ini  pyproject.toml  setup.py_backup  test_us.py
app/bi_api/.dist-info/: PKG-INFO
app/bi_api/app/: .package.json  Dockerfile  __main__.py
app/bi_api/bi/: __init__.py  app.py  app_async.py
app/bi_api/docker/: gunicorn_config.py  postgresql_in_build.sh
app/bi_api/uwsgi/: uwsgi-bi-api.ini  uwsgi-query-executer.ini
app/bi_external_api/: .arcignore  .release.hjson  Dockerfile.tier1  Makefile  README.md  changelog.md  docker-compose.yml  make_tools_venv.sh  pyproject.toml  setup.py_backup
app/bi_external_api/app/: .package.json  Dockerfile  __main__.py
app/bi_external_api/bi_external_api/: __init__.py  app.py  enums.py  exc_defs.py  exc_tooling.py  ext_builders.py  ext_examples.py  settings.py  testing_no_deps.py  testings.py  utils.py
app/bi_external_api/bi_external_api_tests/: config.py  conftest.py  test_acceptance.py  test_acceptance_dc.py  test_acceptance_ya_team.py  test_scenario_grpc.py  utils.py
app/bi_file_secure_reader/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml  setup.py_backup
app/bi_file_secure_reader/app/: .package.json  Dockerfile  __main__.py
app/bi_file_secure_reader/bi_file_secure_reader/: app.py
app/bi_file_uploader/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  mypy.ini  pyproject.toml  setup.py_backup
app/bi_file_uploader/app/: .package.json  Dockerfile  __main__.py
app/bi_file_uploader/bi_file_uploader/: __init__.py  app.py  app_factory.py  app_settings.py
app/bi_file_uploader_worker/: .release.hjson  Dockerfile.tier1  changelog.md  pyproject.toml  setup.py_backup
app/bi_file_uploader_worker/app/: .package.json  Dockerfile
app/bi_file_uploader_worker/bi_file_uploader_worker/: __init__.py  app.py  app_factory.py  app_health_check.py  app_health_check_lib.py  app_settings.py
app/bi_file_uploader_worker/bi_file_uploader_worker_tests/: conftest.py
app/bi_rqe_ext_async/: Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app/bi_rqe_ext_async/app/: .package.json  Dockerfile  __main__.py
app/bi_rqe_ext_async/bi_rqe_ext_async/: app.py
app/bi_rqe_ext_sync/: Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app/bi_rqe_ext_sync/app/: .package.json  Dockerfile  __main__.py
app/bi_rqe_ext_sync/uwsgi/: uwsgi-query-executer-tier1.ini  uwsgi-query-executer.ini
app/bi_rqe_int_sync/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app/bi_rqe_int_sync/uwsgi/: uwsgi-query-executer.ini
app/bi_test_project_worker/: .release.hjson  Makefile  changelog.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.py_backup
app/bi_test_project_worker/app/: .package.json  Dockerfile  __main__.py
app/bi_test_project_worker/bi_test_project_worker/: app.py  settings.py  tasks.py
app/bi_test_project_worker/tests/: conftest.py
app/bi_testing_db_provision/: .release.hjson  README.md  changelog.md  docker-compose.yml  pyproject.toml  setup.py_backup
app/bi_testing_db_provision/alembic/: env.py
app/bi_testing_db_provision/app/: .package.json  Dockerfile  __main__.py
app/bi_testing_db_provision/bi_testing_db_provision/: app.py  common_config_models.py  db_connection.py  db_utils.py  settings.py  zavhoz.py
app/dl_data_api/: Dockerfile  Dockerfile.slim  pyproject.toml
app/dl_data_api/dl_data_api/: __init__.py  app.py  app_factory.py
app/dl_data_api/docker/: gunicorn_logging.ini
app/dl_file_uploader_api/: Dockerfile  README.md  pyproject.toml
app/dl_file_uploader_api/dl_file_uploader_api/: __init__.py  app.py  app_factory.py  app_settings.py
app/dl_file_uploader_worker/: Dockerfile  README.md  pyproject.toml
app/dl_file_uploader_worker/dl_file_uploader_worker/: __init__.py  app.py  app_factory.py  app_settings.py
app/dls/: .dockerignore  .pylintrc  .release.hjson  Dockerfile  Makefile  NOTES.md  README.md  _curl.sh  _envit  _test.sh  changelog.md  djmanage  docker-compose.yml  mypy.ini  pyproject.toml  setup.py_backup  test_integrated.py  test_tasks_manager.py
app/dls/.env_ext/: .release.hjson  qloud_production.hjson  (+1 more)
app_nebius/control_api/: .release.hjson  README.md  pyproject.toml
app_nebius/file_uploader_worker/: Dockerfile  README.md  pyproject.toml
app_os/app_os_control_api/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app_os/app_os_data_api/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app_ya_team/data_api/: Dockerfile  README.md  pyproject.toml
app_ya_team/file_uploader_api/: Dockerfile  README.md  pyproject.toml
app_yc/app_yc_control_api/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app_yc/app_yc_data_api_sec_embeds/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app_yc/app_yc_file_uploader_api/: .release.hjson  Dockerfile.tier1  README.md  changelog.md  pyproject.toml
app_yc/app_yc_file_uploader_worker/: .release.hjson  Dockerfile.tier1  changelog.md  gunicorn_logging.ini  pyproject.toml
lib/anyascii/: pyproject.toml  setup.py_backup
lib/bi_api_client/: pyproject.toml  setup.py_backup
lib/bi_api_commons/: README.md  pyproject.toml  setup.py_backup
metapkg/: poetry.toml  pyproject.toml
(+11769 files in other folders)
