[tool.poetry]
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
description = "Aux pyproject.toml for the common project properties"
license = "Apache 2.0"
name = "datalens_backend_root_package"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

[tool.black]
force-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  lib/redis-cache-lock/
  | lib/clickhouse-sqlalchemy/
  | lib/dl_formula/dl_formula/parser/antlr/gen/
  | lib/dl_task_processor/dl_task_processor/upstream_worker.py
)
'''
line-length = 120
target-version = ['py312']

[tool.isort]
force_grid_wrap = 2
force_sort_within_sections = true
include_trailing_comma = true
known_connectors = [
  "bi_connector_*",
  "dl_connector_*",
]
known_first_party = [
  "bi_*",
  "dl_*",
]
line_length = 120
multi_line_output = 3
profile = "black"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "CONNECTORS",
  "LOCALFOLDER",
]
skip_glob = [
  "lib/clickhouse-sqlalchemy/*",
  "lib/dl_formula/dl_formula/parser/antlr/gen/*",
  "lib/dl_task_processor/dl_task_processor/upstream_worker.py",
  "lib/redis-cache-lock/*",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "lib/clickhouse-sqlalchemy/**",
  "lib/dl_formula/dl_formula/parser/antlr/gen/**",
  "lib/dl_task_processor/dl_task_processor/upstream_worker.py",
  "lib/redis-cache-lock/**",
  "node_modules",
  "tools_venv",
  "venv",
]
force-exclude = true
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Each entry is tagged with its disposition:
# Never — a deliberate, permanent choice; comment says what it is and why we keep ignoring it.
# Later — we want it eventually; comment says what it is.
ignore = [
  "ASYNC109", # Never: async-function-with-timeout — fires on any async fn that has a `timeout` parameter regardless of use; our `timeout` params are legitimate domain durations (functions run their own wait-loop), so enforcing only adds noqa noise
  "DTZ001", # Later: call-datetime-without-tzinfo — DTZ category is enabled, but its firing sub-rules are deferred: naive datetimes are pervasive (tests, parsing, connector data, internal timings) and per-site tz migration needs the connector/DB test matrix to verify
  "E501", # Later: line-too-long (currently delegated to black formatting)
  "PIE790", # Never: unnecessary-placeholder — we intentionally keep explicit `pass` / `...` in stub bodies (abstract methods, empty overrides, docstring-only classes) for readability
  "RUF001", # Later: ambiguous-unicode-character-string (Cyrillic look-alikes often intentional — needs per-site review)
  "RUF002", # Never: ambiguous-unicode-character-docstring — Cyrillic in RU docstrings is intentional; per-site review showed flagging only adds `noqa` noise (incl. dead/commented-out code)
  "RUF003", # Never: ambiguous-unicode-character-comment — same intentional Cyrillic in RU comments
  "RUF009", # Never: function-call-in-dataclass-default — fires on the attrs field-declaration idiom (`s_attrib()` returns `attr.ib()`, ~287 sites); a pure false positive, not a real shared-mutable default
  "RUF012", # Later: mutable-class-default
  "RUF100", # Later: unused-noqa — revisit once all rules from this migration are enabled
  "SIM108", # Never: if-else-block-instead-of-if-exp — forcing ternaries hurts readability; many sites carry explanatory comments / type-ignores that don't survive the (unsafe-only) autofix
  "SIM300", # Never: yoda-conditions — autofix mis-handles our settings/config comparisons (`settings.MODE == Enum.member`), yoda-fying correct code
]
# Rule categories considered for `select`, documented here (outside the array so
# toml-sort does not drop the commented-out lines):
#
# Later — want these; enable in follow-up PRs/tickets, once the backlog
# of existing violations is cleared:
# "N",     # pep8-naming — Later: 770+ hits, breaking API renames — own ticket(s)
# "ANN",   # flake8-annotations — Later: blanket annotation enforcement, enabled incrementally per sub-rule in BI-7445 (see ANN* entries in select); the full category is still deferred
# "S",     # flake8-bandit — Later: security checks; could complement a dedicated scanner (bandit/semgrep)
#
# Never — will not enable:
# "I",   # isort — Never: ruff has no `force_grid_wrap` equivalent (tried; collapses multi-member imports), keep the standalone isort linter (see [tool.isort])
# "TCH", # flake8-type-checking — Never: forces `from __future__ import annotations` / TYPE_CHECKING blocks, both banned by python-style.mdc
# "D",   # pydocstyle — Never: we don't mandate docstrings repo-wide
select = [
  "ANN204", # flake8-annotations (sub-rule): missing-return-type-special-method
  "ANN205", # flake8-annotations (sub-rule): missing-return-type-static-method
  "ANN206", # flake8-annotations (sub-rule): missing-return-type-class-method
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "F", # Pyflakes
  "FLY", # flynt
  "FURB", # refurb
  "G", # flake8-logging-format
  "LOG", # flake8-logging
  "PERF", # Perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = [
  "tool.poetry",
  "tool.poetry.dependencies",
  "tool.poetry.group.tests",
  "tool.poetry.group",
  "tool",
]
trailing_comma_inline_array = true
overrides."tool.isort.sections".inline_arrays = false
overrides."tool.tomlsort.sort_first".inline_arrays = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
