[tool.poetry]
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
description = "Aux pyproject.toml for the common project properties"
license = "Apache 2.0"
name = "datalens_backend_root_package"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

[tool.black]
force-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  lib/redis-cache-lock/
  | lib/clickhouse-sqlalchemy/
  | lib/dl_formula/dl_formula/parser/antlr/gen/
  | lib/dl_task_processor/dl_task_processor/upstream_worker.py
)
'''
line-length = 120
target-version = ['py312']

[tool.isort]
force_grid_wrap = 2
force_sort_within_sections = true
include_trailing_comma = true
known_connectors = [
  "bi_connector_*",
  "dl_connector_*",
]
known_first_party = [
  "bi_*",
  "dl_*",
]
line_length = 120
multi_line_output = 3
profile = "black"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "CONNECTORS",
  "LOCALFOLDER",
]
skip_glob = [
  "lib/clickhouse-sqlalchemy/*",
  "lib/dl_formula/dl_formula/parser/antlr/gen/*",
  "lib/dl_task_processor/dl_task_processor/upstream_worker.py",
  "lib/redis-cache-lock/*",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "lib/clickhouse-sqlalchemy/**",
  "lib/dl_formula/dl_formula/parser/antlr/gen/**",
  "lib/dl_task_processor/dl_task_processor/upstream_worker.py",
  "lib/redis-cache-lock/**",
  "node_modules",
  "tools/cookiecutter/templates/**",
  "tools_venv",
  "venv",
]
force-exclude = true
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Each entry is tagged with its disposition:
# Never — a deliberate, permanent choice; comment says what it is and why we keep ignoring it.
# Later — we want it eventually; comment says what it is.
ignore = [
  "ASYNC109", # Never: async-function-with-timeout — fires on any async fn that has a `timeout` parameter regardless of use; our `timeout` params are legitimate domain durations (functions run their own wait-loop), so enforcing only adds noqa noise
  "DTZ001", # Later (TODO: BI-7500): call-datetime-without-tzinfo — DTZ category is enabled, but this sub-rule is deferred wholesale to BI-7500: naive datetimes are pervasive (tests, parsing, connector data, internal timings) and per-site tz migration needs the connector/DB test matrix to verify
  "E501", # Never: line-too-long — line length is delegated to black
  "PIE790", # Never: unnecessary-placeholder — we intentionally keep explicit `pass` / `...` in stub bodies (abstract methods, empty overrides, docstring-only classes) for readability
  "RUF001", # Never: ambiguous-unicode-character-string — Cyrillic look-alikes in string literals (test data, localized messages) are intentional; per-site review showed flagging only adds `noqa` noise
  "RUF002", # Never: ambiguous-unicode-character-docstring — Cyrillic in RU docstrings is intentional; per-site review showed flagging only adds `noqa` noise (incl. dead/commented-out code)
  "RUF003", # Never: ambiguous-unicode-character-comment — same intentional Cyrillic in RU comments
  "RUF009", # Never: function-call-in-dataclass-default — fires on the attrs field-declaration idiom (`s_attrib()` returns `attr.ib()`, ~287 sites); a pure false positive, not a real shared-mutable default
  "S101", # Never: assert — `assert` is an accepted inline invariant/precondition idiom repo-wide (incl. non-test source) and ubiquitous in tests; flake8-bandit's assert ban would only add noqa noise. Preliminary disposition for the `S` category (migrated incrementally in BI-7445; security-relevant `S` sub-rules handled separately).
  "S104", # Never: hardcoded-bind-all-interfaces — binding to 0.0.0.0 is intentional for containerized services (exposure is controlled by the orchestrator, not the app); the rule would only add noqa noise.
  "S105", # Never: hardcoded-password-string — fires on the naming heuristic (vars named password/token/secret); per-site review of all sites found zero real secrets (HTTP header names, form-field keys, log-masking regexes, masks, fakes), so enforcing only adds noqa noise.
  "S106", # Never: hardcoded-password-func-arg — twin of S105; fires on call kwargs named password/token/secret with literal values, all benign (test fixtures + dummy/mock US managers with a dummy us_master_token); no real secrets, so enforcing only adds noqa noise.
  "S311", # Never: suspicious-non-cryptographic-random-usage — `random` for non-security use (load balancing, retry jitter, test data, internal ids) is pervasive and legitimate; per-site review found no security-sensitive use, so enforcing only adds noqa noise.
  "S608", # Never: hardcoded-sql-expression — string-built SQL is pervasive and legitimate here (connectors, repositories: structural query construction with parameterized values, not user-input interpolation); per-site review found no injection sites, so enforcing only adds noqa noise.
  "SIM108", # Never: if-else-block-instead-of-if-exp — forcing ternaries hurts readability; many sites carry explanatory comments / type-ignores that don't survive the (unsafe-only) autofix
  "SIM300", # Never: yoda-conditions — autofix mis-handles our settings/config comparisons (`settings.MODE == Enum.member`), yoda-fying correct code
]
# Rule categories considered for `select`, documented here (outside the array so
# toml-sort does not drop the commented-out lines):
#
# Later — want these; enable in follow-up PRs/tickets, once the backlog
# of existing violations is cleared:
# "ANN",   # flake8-annotations — Later: blanket annotation enforcement, enabled incrementally per sub-rule in BI-7445 (see ANN* entries in select); the full category is still deferred
# "S",     # flake8-bandit — Later: security checks; could complement a dedicated scanner (bandit/semgrep)
#
# Never — will not enable:
# "I",   # isort — Never: ruff has no `force_grid_wrap` equivalent (tried; collapses multi-member imports), keep the standalone isort linter (see [tool.isort])
# "TCH", # flake8-type-checking — Never: forces `from __future__ import annotations` / TYPE_CHECKING blocks, both banned by python-style.mdc
# "D",   # pydocstyle — Never: we don't mandate docstrings repo-wide
select = [
  "ANN002", # flake8-annotations (sub-rule): missing-type-args
  "ANN003", # flake8-annotations (sub-rule): missing-type-kwargs
  "ANN204", # flake8-annotations (sub-rule): missing-return-type-special-method
  "ANN205", # flake8-annotations (sub-rule): missing-return-type-static-method
  "ANN206", # flake8-annotations (sub-rule): missing-return-type-class-method
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "F", # Pyflakes
  "FLY", # flynt
  "FURB", # refurb
  "G", # flake8-logging-format
  "LOG", # flake8-logging
  "N", # pep8-naming
  "PERF", # Perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "S107", # flake8-bandit (sub-rule): hardcoded-password-default (password-like value as a function default)
  "S108", # flake8-bandit (sub-rule): hardcoded-temp-file (temp paths under /tmp etc.)
  "S110", # flake8-bandit (sub-rule): try-except-pass (silently swallowed exceptions)
  "S113", # flake8-bandit (sub-rule): request-without-timeout (HTTP call can hang forever)
  "S301", # flake8-bandit (sub-rule): suspicious-pickle-usage (deserializing untrusted data)
  "S303", # flake8-bandit (sub-rule): suspicious-insecure-hash-usage (MD2/MD4/MD5/SHA1)
  "S602", # flake8-bandit (sub-rule): subprocess-popen-with-shell-equals-true (shell injection via subprocess shell=True)
  "S603", # flake8-bandit (sub-rule): subprocess-without-shell-equals-true (subprocess call — audit for untrusted input)
  "S605", # flake8-bandit (sub-rule): start-process-with-a-shell (shell injection via os.system)
  "S607", # flake8-bandit (sub-rule): start-process-with-partial-path (subprocess with a non-absolute executable, e.g. "git" not "/usr/bin/git")
  "S701", # flake8-bandit (sub-rule): jinja2-autoescape-false (XSS via unescaped template output)
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = [
  "tool.poetry",
  "tool.poetry.dependencies",
  "tool.poetry.group.tests",
  "tool.poetry.group",
  "tool",
]
trailing_comma_inline_array = true
overrides."tool.isort.sections".inline_arrays = false
overrides."tool.tomlsort.sort_first".inline_arrays = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
