[tool.poetry]
name = "datalens-metapackage"
version = "0.2.0"
description = ""
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
license = "Apache 2.0"
packages = [{include = "bi_ci_dummy"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
antlr4-python3-runtime = "==4.11.1"
aiohttp = "==3.9.1"
aiopg = "==1.4.0"
anyascii = "==0.3.2"
attrs = "==22.2.0"
arq = "==0.25.0"
certifi = "==2023.7.22"
openpyxl = "==3.0.10"
aiobotocore = "==2.4.2"
aiogoogle = "==5.2.0"
marshmallow = "==3.19.0"
sentry-sdk = "==1.15.0"
pyyaml = "==6.0.1"
gunicorn = "==21.2.0"
shortuuid = "==1.0.11"
sqlalchemy = "==1.4.46, <2.0"
Flask = "==2.2.5"
Werkzeug = "==2.2.3"
flask-marshmallow = "==1.1.0"
flask-restx = "==1.1.0"
graphviz = "==0.17"
ipdb = "==0.13.13"
ipython = "==8.10.0"
marshmallow-oneofschema = "==3.1.0"
pandas = "==2.0.3"
numpy = "==1.26.4"
pyopenssl = "==23.2.0"
python-dateutil = "==2.8.2"
requests = "==2.28.2"
tabulate = "==0.9.0"
async-timeout = "==4.0.3"
psycopg2-binary = "==2.9.9"
pyjwt = "==2.4.0"
pytz = "==2022.7.1"
ujson = "==1.35"
werkzeug = "==2.2.3"
xxhash = "==3.2.0"
asyncpg = "==0.29.0"
flask = "==2.2.5"
cffi = "==1.16.0"
snowflake-connector-python = "==3.6.0"
snowflake-sqlalchemy = "==1.5.1"
clickhouse-driver = "==0.2.6"
dill = "==0.3.6"
google-api-core = "==2.15.0"
google-auth = "==2.21.0"
oracledb = "==2.0.0"
yarl = "==1.9.4"
googleapis-common-protos = "==1.59.1"
grpcio = "==1.60.0"
protobuf = "==4.24.3"
pymysql = "==1.1.1"
pyodbc = "==5.0.1"
ciso8601 = "==2.2.0"
aiomysql = "==0.2.0"
redis = "==5.0.1"
Babel = "==2.12.1"
jinja2 = "==3.1.2"
opentracing = "==2.4.0"
frozendict = "==2.3.8"
typing-extensions = "==4.9.0"
aiodns = "==3.1.1"
jaeger-client = "==4.8.0"
pytest = "==7.2.2"
tornado = "==6.3.3"
cryptography = "==41.0.4"
typeguard = "==4.1.5"
more-itertools = "==9.1.0"
faust-cchardet = ">=2.1.19"
dnspython = "==2.2.1"
lz4 = "==4.3.2"
sqlalchemy-bigquery = "==1.9.0"
google-cloud-bigquery = "==3.14.1"
google-cloud-bigquery-storage = "==2.24.0"
google-resumable-media = "==2.5.0"
google-cloud-core = "==2.4.1"

[tool.poetry.group.ci.dependencies]
#
# All apps should be listed here. This group is installed for CI & local development
#
clickhouse-sqlalchemy = {path = "../lib/clickhouse-sqlalchemy"}
dynamic-enum = {path = "../lib/dynamic_enum"}
redis_cache_lock = {path = "../lib/redis-cache-lock"}
statcommons = {path = "../lib/statcommons"}
dl-version = {path = "../lib/dl_version"}
dl-file-uploader-task-interface = {path = "../lib/dl_file_uploader_task_interface"}
dl-api-commons = {path = "../lib/dl_api_commons"}
dl-api-lib-testing = {path = "../lib/dl_api_lib_testing"}
dl-sqlalchemy-postgres = {path = "../lib/dl_sqlalchemy_postgres"}
dl-utils = {path = "../lib/dl_utils"}
dl-sqlalchemy-common = {path = "../lib/dl_sqlalchemy_common"}
dl-us-client = {path = "../lib/dl_us_client"}
dl-file-uploader-lib = {path = "../lib/dl_file_uploader_lib"}
dl-constants = {path = "../lib/dl_constants"}
dl-formula-ref = {path = "../lib/dl_formula_ref"}
dl-connector-promql = {path = "../lib/dl_connector_promql"}
dl-compeng-pg = {path = "../lib/dl_compeng_pg"}
dl-api-client = {path = "../lib/dl_api_client"}
dl-i18n = {path = "../lib/dl_i18n"}
dl-connector-chyt = {path = "../lib/dl_connector_chyt"}
dl-connector-bundle-chs3 = {path = "../lib/dl_connector_bundle_chs3"}
dl-sqlalchemy-clickhouse = {path = "../lib/dl_sqlalchemy_clickhouse"}
dl-connector-postgresql = {path = "../lib/dl_connector_postgresql"}
dl-connector-clickhouse = {path = "../lib/dl_connector_clickhouse"}
dl-sqlalchemy-chyt = {path = "../lib/dl_sqlalchemy_chyt"}
dl-connector-greenplum = {path = "../lib/dl_connector_greenplum"}
dl-sqlalchemy-mssql = {path = "../lib/dl_sqlalchemy_mssql"}
dl-sqlalchemy-promql = {path = "../lib/dl_sqlalchemy_promql"}
dl-formula-testing = {path = "../lib/dl_formula_testing"}
dl-testing = {path = "../lib/dl_testing"}
dl-formula = {path = "../lib/dl_formula"}
dl-connector-snowflake = {path = "../lib/dl_connector_snowflake"}
dl-configs = {path = "../lib/dl_configs"}
dl-api-connector = {path = "../lib/dl_api_connector"}
dl-core = {path = "../lib/dl_core"}
dl-app-tools = {path = "../lib/dl_app_tools"}
dl-query-processing = {path = "../lib/dl_query_processing"}
dl-file-uploader-api-lib = {path = "../lib/dl_file_uploader_api_lib"}
dl-sqlalchemy-oracle = {path = "../lib/dl_sqlalchemy_oracle"}
dl-file-secure-reader-lib = {path = "../lib/dl_file_secure_reader_lib"}
dl-model-tools = {path = "../lib/dl_model_tools"}
dl-package-boilerplate = {path = "../lib/dl_package_boilerplate"}
dl-core-testing = {path = "../lib/dl_core_testing"}
dl-api-lib = {path = "../lib/dl_api_lib"}
dl-db-testing = {path = "../lib/dl_db_testing"}
dl-file-uploader-worker-lib = {path = "../lib/dl_file_uploader_worker_lib"}
dl-connector-bigquery = {path = "../lib/dl_connector_bigquery"}
dl-task-processor = {path = "../lib/dl_task_processor"}
dl-sqlalchemy-metrica-api = {path = "../lib/dl_sqlalchemy_metrica_api"}
dl-connector-metrica = {path = "../lib/dl_connector_metrica"}
dl-sqlalchemy-bitrix = {path = "../lib/dl_sqlalchemy_bitrix"}
dl-connector-bitrix-gds = {path = "../lib/dl_connector_bitrix_gds"}
dl-connector-oracle = {path = "../lib/dl_connector_oracle"}
dl-connector-mysql = {path = "../lib/dl_connector_mysql"}
dl-sqlalchemy-mysql = {path = "../lib/dl_sqlalchemy_mysql"}
dl-maintenance = {path = "../lib/dl_maintenance"}
dl-connector-mssql = {path = "../lib/dl_connector_mssql"}
dl-attrs-model-mapper = {path = "../lib/dl_attrs_model_mapper"}
dl-attrs-model-mapper-doc-tools = {path = "../lib/dl_attrs_model_mapper_doc_tools"}
dl-connector-ydb = {path = "../lib/dl_connector_ydb"}
dl-dashsql = {path = "../lib/dl_dashsql"}
dl-pivot = {path = "../lib/dl_pivot"}
dl-pivot-pandas = {path = "../lib/dl_pivot_pandas"}
dl-cache-engine = {path = "../lib/dl_cache_engine"}
dl-rate-limiter = {path = "../lib/dl_rate_limiter", extras=["flask", "aiohttp"]}
dl-rls = {path = "../lib/dl_rls"}
dl-zitadel = {path = "../lib/dl_zitadel"}
dl-auth-api-lib = {path = "../lib/dl_auth_api_lib"}

[tool.poetry.group.dev.dependencies]
black = "==23.12.1"
ruff = "==0.2.1"
isort = "==5.13.2"
ipdb = "==0.13.13"
pyodbc = "==5.0.1"
pytest = "==7.2.2"
python-dateutil = "==2.8.2"
pytest-asyncio = "==0.21.0"
docker = "==6.0.1"
uwsgi = "==2.0.23"
shortuuid = "==1.0.11"
sentry-sdk = "==1.15.0"
babel = "==2.12.1"
mock = "==4.0.3"
responses = "==0.23.1"
pytest-mock = "==3.12.0"
pytest-aiohttp = "==1.0.5"
flaky = "==3.8.1"
pytest-lazy-fixture = "==0.6.3"
pytz = "==2022.7.1"
oracledb = "==2.0.0"
psycopg2-binary = "==2.9.9"
tomlkit = "==0.12.3"
pandas = "==2.0.3"
platformdirs = "==3.8.0"
clize = "==5.0.0"
poetry = "==1.7.1"
deptry = "==0.16.1"

#
# This section defines dependencies groups per app.
# To export/install specific app without other dependencies - use `--only` flag
# Group naming convention: `app_${APP_FOLDER_NAME}`
#

[tool.poetry.group.app_dl_os_control_api.dependencies]
dl-control-api = {path = "../app/dl_control_api"}

[tool.poetry.group.app_dl_os_data_api.dependencies]
dl-data-api = {path = "../app/dl_data_api"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[datalens.meta.mypy_common]
# this section will be inserted into all packages under
warn_unused_configs = true
disallow_untyped_defs = true
#; to make `disallow_untyped_defs = False` overrides more useful:
check_untyped_defs = true
strict_optional = true

[datalens.meta.mypy]
targets = []    # ignore mypy for this module

[datalens.meta.mypy_stubs_packages_override]
# bunch of overrides for different case
# : src package -> {"name": "non standard name, but same stub should have same version"}
# : src package -> {"name": "non standard name", "version": "hard coded version"}
# : src package -> {"version": "hard coded version"}  # implies standard types-{pkg name} name
# : src package -> {"ignore": true} # stub doesn't exist
aiogoogle =  {ignore = true}
aiomysql =  {ignore = true}
aiopg =  {ignore = true}
antlr4-python3-runtime =  {ignore = true}
arq =  {ignore = true}
async-timeout =  {ignore = true}
asyncpg =  {name = "asyncpg-stubs"}
attrs =  {ignore = true}
babel =  {ignore = true}
black =  {ignore = true}
boto3 =  {name = "boto3-stubs"}
faust-cchardet =  {ignore = true}
certifi =  {ignore = true}
ciso8601 =  {ignore = true}
clickhouse-driver =  {ignore = true}
clize =  {ignore = true}
dill =  {ignore = true}
dnspython =  {ignore = true}
flask =  {ignore = true}
flask-marshmallow =  {ignore = true}
flask-restx =  {ignore = true}
frozendict =  {ignore = true}
google-api-core =  {ignore = true}
google-auth =  {ignore = true}
googleapis-common-protos =  {ignore = true}
graphviz =  {ignore = true}
grpcio =  {ignore = true}
protobuf =  {ignore = true}
gunicorn =  {ignore = true}
ipdb =  {ignore = true}
ipython =  {ignore = true}
jaeger-client =  {ignore = true}
jinja2 =  {ignore = true}
lz4 =  {ignore = true}
marshmallow =  {ignore = true}
more-itertools =  {ignore = true}
openpyxl =  {ignore = true}
oracledb =  {ignore = true}
pandas = {name = "pandas-stubs", version="2.1.4.231227"}
platformdirs =  {ignore = true}
poetry =  {ignore = true}
psycopg2-binary =  {name = "types-psycopg2"}
pyjwt =  {ignore = true}
pymysql = {ignore = true}
pyodbc =  {ignore = true}
pytest =  {ignore = true}
pytest-asyncio =  {ignore = true}
pyyaml =  {ignore = true}
responses =  {ignore = true}
ruff =  {ignore = true}
sentry-sdk =  {ignore = true}
shortuuid =  {ignore = true}
snowflake-connector-python =  {ignore = true}
snowflake-sqlalchemy =  {ignore = true}
tomlkit =  {ignore = true}
tornado =  {ignore = true}
typeguard =  {ignore = true}
typing-extensions =  {ignore = true}
ujson =  {version = "5.8.0.1"}
uwsgi =  {ignore = true}
werkzeug =  {ignore = true}
xxhash =  {ignore = true}
yarl =  {ignore = true}
aioitertools =  {ignore = true}
aiosignal = {ignore = true}
aniso8601 = {ignore = true}
anyascii = {ignore = true}
asn1crypto = {ignore = true}
asttokens = {ignore = true}
backcall = {ignore = true}
botocore = {name = "botocore-stubs"}
build = {ignore = true}
"cachecontrol[filecache]" = {ignore = true}
cachetools = {ignore = true}
charset-normalizer = {ignore = true}
cleo = {ignore = true}
click = {ignore = true}
crashtest = {ignore = true}
distlib = {ignore = true}
docutils = {ignore = true}
dulwich = {ignore = true}
et-xmlfile = {ignore = true}
exceptiongroup = {ignore = true}
executing = {ignore = true}
filelock = {ignore = true}
frozenlist = {ignore = true}
"google-api-core[grpc]" = {ignore = true}
google-cloud-bigquery = {ignore = true}
google-cloud-bigquery-storage = {ignore = true}
google-cloud-core = {ignore = true}
google-resumable-media = {ignore = true}
hiredis = {ignore = true}
idna = {ignore = true}
importlib-metadata = {ignore = true}
iniconfig = {ignore = true}
installer = {ignore = true}
itsdangerous = {ignore = true}
jaraco-classes = {ignore = true}
jedi = {ignore = true}
jsonschema = {ignore = true}
keyring = {ignore = true}
lockfile = {ignore = true}
markupsafe = {ignore = true}
matplotlib-inline = {ignore = true}
msgpack = {ignore = true}
multidict = {ignore = true}
numpy = {ignore = true}
od = {ignore = true}
oscrypto = {ignore = true}
packaging = {ignore = true}
parso = {ignore = true}
pathspec = {ignore = true}
pickleshare = {ignore = true}
pkginfo = {ignore = true}
poetry-core = {ignore = true}
poetry-plugin-export = {ignore = true}
prompt-toolkit = {ignore = true}
ptyprocess = {ignore = true}
pure-eval = {ignore = true}
pyasn1 = {ignore = true}
pyasn1-modules = {ignore = true}
pycares = {ignore = true}
pycparser = {ignore = true}
pycryptodomex = {ignore = true}
pygments = {name = "types-Pygments", version="2.15.0.2"}
pyproject-hooks = {ignore = true}
pyrsistent = {ignore = true}
python-dotenv = {ignore = true}
rapidfuzz = {ignore = true}
"redis[hiredis]" = {ignore = true}
requests-toolbelt = {ignore = true}
rsa = {ignore = true}
shellingham = {ignore = true}
sigtools = {ignore = true}
sqlalchemy-bigquery = {ignore = true}
sqlparse = {ignore = true}
stack-data = {ignore = true}
threadloop = {ignore = true}
thrift = {ignore = true}
tomli = {ignore = true}
tonyg-rfc3339 = {ignore = true}
traitlets = {ignore = true}
trove-classifiers = {ignore = true}
types-pyyaml = {ignore = true}
virtualenv = {ignore = true}
wcwidth = {ignore = true}
webencodings = {ignore = true}
wrapt = {ignore = true}
zipp = {ignore = true}
aiohttp = {ignore = true}
greenlet = {ignore = true}
jeepney = {ignore = true}
pywin32-ctypes = {ignore = true}
secretstorage = {ignore = true}
tzdata = {ignore = true}
xattr = {ignore = true}
appnope = {ignore = true}
